Add data collector

--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,12 @@ functions:
       origin: '*'
       headers:
         - Content-Type
+  cron-collector:
+    handler: data_collector.main
+    memorySize: 128
+    timeout: 120 
+    events:
+      - schedule: rate(2 minutes)
 
 plugins:
   - serverless-wsgi
